[package]
name = "pp-server"
version = "0.4.0"
authors = ["Pure-Peace <940857703@qq.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/pure-peace/pp-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# default = ["peace-objects/no_database"] # Not use peace database, run pp-server independently.
default = ["with_peace"] # Works with peace, including peace database

with_peace = [
    "deadpool-postgres",
    "deadpool-redis",
    "tokio-postgres",
    "peace-database",
    "peace-objects/with_peace",
    "peace-objects/peace_api",
    "peace-utils/peace",
]

[dependencies]
askama = "0.10.5"
bytes = "1.0"
chrono = "0.4.19"
colored = "2.0.0"
config = "0.10"
derivative = "2.2.0"
dotenv = "0.15.0"
env_logger = "0.8.3"
field_names = "0.1.1"
hashbrown = "0.11"
json = "0.12.4"
log = "0.4.14"
ntex = "0.3"
prometheus = { version = "0.12", features = ["process"] }
reqwest = { version = "0.11", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_str = "0.1.0"
tokio = { version = "1.6" }


# Feature peace
deadpool-postgres = { version = "0.7", optional = true }
deadpool-redis = { version = "0.7", optional = true }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"], optional = true }

peace-performance = { git = "https://github.com/Pure-Peace/Peace-performance.git", branch = "main" }

# Git
peace-constants = {git = "https://github.com/Pure-Peace/Peace.git", branch = "main" }
peace-database = { git = "https://github.com/Pure-Peace/Peace.git", branch = "main", features = ["with_peace"], optional = true }
peace-objects = { git = "https://github.com/Pure-Peace/Peace.git", branch = "main", features = ["osu_file_downloader"], optional = true }
peace-settings = { git = "https://github.com/Pure-Peace/Peace.git", branch = "main" }
peace-utils = { git = "https://github.com/Pure-Peace/Peace.git", branch = "main", features = ["web", "async_file"] }

# Local (download peace manual)
# peace-constants = { path = "../../Peace/peace-constants" }
# peace-database = { path = "../../Peace/peace-database", features = ["with_peace"], optional = true }
# peace-objects = { path = "../../Peace/peace-objects", features = ["osu_file_downloader"], optional = true }
# peace-settings = { path = "../../Peace/peace-settings" }
# peace-utils = { path = "../../Peace/peace-utils", features = ["web", "async_file"] }


# link-time-optimization
# Enabling makes the compiled program size smaller and higher performance, 
# but it will extend compilation time.
[profile.release]
lto = true
codegen-units = 1
opt-level = "s"

# link-time-optimization
# Enabling makes the compiled program size smaller and higher performance, 
# but it will extend compilation time.
[profile.bench]
lto = true
codegen-units = 1
opt-level = "s"
